--- a/src/style.css
+++ b/src/style.css
@@ -247,6 +247,7 @@ input[type=number]::-webkit-outer-spin-button {
   flex-direction: column;
   color: white;
   opacity: 0.8;
+  text-align: center;
 }
 
 .main__image-header {
